Fixed tags weird wrap bug

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -1,5 +1,14 @@
+main {
+    display: grid;
+    justify-content: center;
+}
+
+h1 {
+    text-align: center;
+}
+
 img {
-    max-width: 80vw;
+    max-width: 55vw;
     height: auto;
 }
 
@@ -9,9 +18,19 @@ pre {
 }
 
 section {
+    width: 60vw;
     background-color: whitesmoke;
     padding: 2vh 5vw 2vh 5vw;
     margin-top: 10px;
     border-radius: 5px;
     text-align: justify;
+}
+
+aside {
+    width: 10vw;
+}
+
+.post-page {
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
 }
